name:                xfigparser
version:             0.1.0.0
synopsis:            xfig format parser
description:         xfig format parser written in haskell
license:             BSD3
license-file:        LICENSE
author:              Ian-Woo Kim
maintainer:          ianwookim@gmail.com
-- copyright:           Ian-Woo Kim
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src  
  exposed-modules:     Text.Xfig
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       attoparsec,
                       text

 
  default-language:    Haskell2010